<resources>
    <string name="app_name">ROM Control</string>
    <string name="user_interface">User Interface</string>
    <string name="general_ui">General UI</string>
    <string name="lockscreen_options">Lockscreen options</string>
    <string name="power_menu_optons">Power menu options</string>
    <string name="functionality">Functionality</string>
    <string name="power_saver">Power saver</string>
    <string name="led_options">LED options</string>
    <string name="statusbar">Statusbar</string>
    <string name="general">General</string>
    <string name="toggles_layout">Toggles</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="nav_bar">Navigation bar</string>
    <string name="tools">Tools</string>
    <string name="weather">Weather</string>
    <string name="signal">Signal</string>
    <string name="header_summary_battery">Battery bar, 1% battery mod, etc</string>
    <string name="header_summary_general_ui">Boot animation, bug mailer, rotation, IME switcher, etc</string>
    <string name="header_summary_navigation_bar">Buttons to display, nav bar color, order</string>
    <string name="header_summary_lockscreens">Custom apps to launch, layout</string>
    <string name="header_summary_power_menu">What to display in your power menu</string>
    <string name="header_summary_powersaver">Automatically disable data to save battery</string>
    <string name="header_summary_led">Change default settings for Android to use</string>
    <string name="header_summary_general">Settings button behavior</string>
    <string name="header_summary_toggles">Customize toggles</string>
	<string name="header_summary_clock">Clock location, AM/PM style, color</string>
	<string name="header_summary_weather">Enable/disable, set custom location or network, and interval</string>
	<string name="header_summary_signal">Signal dBm text</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_pref_menu_display">Menu location</string>
    <string name="summary_pref_menu_display">Remember to remove your menu buttons if you\'re using the big menu button!</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="navigation_bar_tint_title">Navigation bar color</string>
    <string name="navigation_bar_glow_tint_title">Navigation bar glow color</string>
    <string name="navigation_bar_glow_tint_summary">When you press on a button, there is a glow. Use this to change the color of the glow.</string>
    <string name="navigation_bar_height_title">Navigation bar height</string>
    <string name="navigation_bar_width_title">Navigation bar width</string>
    <string name="title_pref_navigation_menu_display">Menu visibility</string>
    <string name="summary_pref_navigation_menu_display">How and when do you want the menu buttons to appear?</string>
    <string name="navbar_order_title">Navigation button order</string>
    <string name="navbar_order_summary">Customize the order of your soft keys</string>
    <string name="navbar_button_cat">Navigation bar buttons</string>
    <string name="navbar_qty_title">Navigation button quantity</string>
    <string name="navbar_qty_summary">Choose the number of navigation buttons</string>
    <string name="enabled_navbar_buttons_title">Enabled buttons</string>
    <string name="enabled_navbar_buttons_summary">Choose which soft keys you would like to see</string>
    <string name="navbar_action_title">Button %1$s action &amp; icon</string>
    <string name="navbar_longpress_title">Button %1$s longpress action</string>
    <string name="navbar_action_home">Home</string>
    <string name="navbar_action_back">Back</string>
    <string name="navbar_action_recents">Recents</string>
    <string name="navbar_action_search">Search</string>
    <string name="navbar_action_menu">Menu</string>
    <string name="navbar_action_kill">Kill task</string>
    <string name="navbar_action_power">Power</string>
    <string name="navbar_action_none">Empty</string>
    <string name="button_transparency_title">Nav button transparency</string>
    <string name="long_press_home_title">Long press home action</string>
    <string name="long_press_home_summary">What to do when long pressing the home softkey. Reboot required to reflect changes.</string>
    <string name="glow_times_title">Button glow animation</string>
    <string name="glow_times_summary">Adjust how fast your buttons animate after you touch them. Lowering the speed can improve performance.</string>
    <string name="rotation_animation_delay_title">Rotation delay</string>
    <string name="rotation_animation_delay_summary">The number of milliseconds for which the device posture must be stable before an orientation change occurs. 200 ms default.</string>
	<string name="ime_switcher_title">Show IME Switcher</string>
	<string name="ime_switcher_summary">In statusbar, while typing (requires reboot)</string>
	<string name="custom_carrier_label_title">Custom carrier label</string>
	<string name="custom_carrier_label_empty">Please enter a new one!</string>
	<string name="custom_carrier_label_warning">Custom label currently not set. Once you specify a custom one, there is no way back without doing a data wipe</string>
	<string name="longpress_to_kill_title">Hold back to kill</string>
	<string name="longpress_to_kill_summary">Holding back will kill the current activity</string>
    <string name="enable_volume_options">Enable Volume Options</string>
	<string name="rotate_180_title">Allow 180° rotation</string>
	<string name="rotate_180_summary">Allow your device to rotate upside down!</string>
	<string name="recent_app_switcher_title">Recents window style</string>
	<string name="recent_app_switcher_summary">Change the recents window style (requires UI restart)</string>
	<string name="disable_bootanimation_title">Disable boot animation</string>
	<string name="disable_bootanimation_summary">Jerk.</string>
	<string name="disable_bootaudio_title">Disable boot audio</string>
	<string name="disable_bootaudio_summary">Quiet.</string>
	<string name="disable_bootaudio_summary_disabled">To enable boot audio, you must have an MP3 file at \n/system/media/boot_audio.mp3</string>
	<string name="disable_bugmailer_title">Disable bugmailer</string>
	<string name="lcd_density_title">LCD Density</string>
	<string name="lcd_density_summary">unknown</string>
	<string name="crt_animations_header">CRT animations</string>
	<string name="crt_on_title">CRT on animation</string>
	<string name="crt_off_title">CRT off animation</string>
	<string name="lcd_density_wizard">LCD Density Wizard</string>
	<string name="follow_through_title">Follow through!</string>
	<string name="follow_through_summary">Make sure you follow the steps one-by-one and complete each one before proceeding to the next.</string>
	<string name="stock_density_title">1. Change LCD Density to stock value</string>
	<string name="stock_density_summary">Tablets and older phones use 160. Most phones use 240. Galaxy Nexus uses 320 by default.</string>
	<string name="reboot_title">2. Reboot!</string>
	<string name="reboot_summary">Come back here after the reboot and complete the rest of the steps!</string>
	<string name="clear_market_data_title">3. Clear market data</string>
	<string name="clear_market_data_cleared">Market data cleared</string>
	<string name="open_market_title">4. Open Market and hit accept</string>
	<string name="open_market_summary">Press back when done to return here.</string>
	<string name="custom_density_title">5. Change density to whatever you like!</string>
	<string name="custom_density_summary">If you ever have compatibility issues with the market, be sure to return here and repeat the process.</string>
    <string name="pref_lockscreen_layout_title">Lockscreen style</string>
    <string name="pref_lockscreen_layout_summary">Remember to scroll down and change your targets after changing styles</string>
    <string name="title_pref_lockscreen_quad_targets">Quad Targets</string>
    <string name="summary_pref_lockscreen_quad_targets">Adds Phone and Messaging shortcuts on the lock screen</string>
    <string name="title_pref_lockscreen_octo_targets">Octo Targets</string>
    <string name="summary_pref_lockscreen_octo_targets">Adds too many shortcuts on the lock screen</string>
    <string name="title_pref_lockscreen_menu_unlock">Menu unlock</string>
    <string name="summary_pref_lockscreen_menu_unlock">Legacy menu icon unlocks screen (requires reboot)</string>
    <string name="title_lockscreen_user_timeout_override">Wait to lock screen</string>
    <string name="summary_lockscreen_user_timeout_override">Use Android\'s timeout setting after you manually turn the screen off. The default behavior is to use the delay only when the screen times out by itself.</string>
    <string name="show_lock_before_unlock_title">Show lockscreen before unlock</string>
    <string name="show_lock_before_unlock_summary">Show standard lockscreen before secure unlock</string>
    <string name="lockscreen_battery_title">Lockscreen Battery Percentage</string>
    <string name="lockscreen_battery_summary">Always show battery percentage on the lockscreen</string>
	<string name="lockscreen_weather_title">Lockscreen Weather</string>
    <string name="lockscreen_weather_summary">Show Weather Information on Lockscreen. You need to enable ROMControl\'s Weather service to use this</string>
    <string name="volume_wake_title">Volume wake</string>
    <string name="volume_wake_summary">Tapping the volume keys while your phone is off will turn the screen on.</string>
    <string name="volume_music_controls_title">Volume music controls</string>
    <string name="volume_music_controls_summary">Long press volume buttons to skip tracks while screen is off. Volume wake will not work when music is playing.</string>
    <string name="lockscreen_show_nav_title">Hide nav bar</string>
    <string name="lockscreen_show_nav_summary">Hide the nav bar (if your device supports it) on the lockscreen.</string>
	<string name="donate_scar45">https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=FQCWEBYNNUVHQ&amp;lc=CA&amp;currency_code=CAD&amp;bn=PP%%2dDonationsBF%%3abtn_donate_SM%%2egif%%3aNonHosted</string>
	<string name="donate_remicks">https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=lost%%2ejunglist%%40gmail%%2ecom&amp;lc=US&amp;item_name=remicks&amp;currency_code=USD&amp;bn=PP%%2dDonationsBF%%3abtn_donateCC_LG%%2egif%%3aNonHosted</string>
	<string name="donate_roman">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MZD7JLRX6P99Y</string>
	<string name="donate_whitehawk">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=8W7F2Y7S7KRM6</string>
	<string name="donate_zaph">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=AW4DJFL3UWKS2</string>
	<string name="donate_protekk">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=YJTUMSBC2TRHS</string>
	<string name="donate_khasmek">http://nyan.cat</string>
	<string name="donate_sethyx">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=5R4DYJLDYDRAU</string>
	<string name="devs">Developers</string>
	<string name="aokpcb">Android Open Kang Project (AOKPCB Mod)</string>
	<string name="aokpcb_website_title">AOKPCB Website</string>
	<string name="aokpcb_website_summary">aokpcb.team.broc.co/li - Find all newest releases, nightlies, and news here.</string>
	<string name="aokpcb_source_title">AOKPCB Source</string>
	<string name="aokpcb_source_summary">AOKPCB is fully open source. You can always check out the latest source at github.com/aokpcb</string>
    <string name="aokpcb_irc_title">Join us on IRC</string>
    <string name="aokpcb_irc_summary">#AOKPCB @ irc.freenode.net</string>
</resources>