<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:aokp="http://schemas.android.com/apk/res/com.aokp.romcontrol">

	<PreferenceCategory
		android:key="aokpcb"
		android:title="@string/aokpcb">

		<Preference
			android:key="aokpcb_website"
			android:title="@string/aokpcb_website_title"
			android:summary="@string/aokpcb_website_summary" />

		<Preference
			android:key="aokpcb_source"
			android:title="@string/aokpcb_source_title"
			android:summary="@string/aokpcb_source_summary" />

		<Preference
			android:key="aokpcb_irc"
			android:title="@string/aokpcb_irc_title"
			android:summary="@string/aokpcb_irc_summary" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="devs"
		android:title="@string/devs">
		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="scar45"
			aokp:twitterHandle="scar45"
			aokp:donateLink="@string/donate_scar45" />

		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="remicks"
			aokp:twitterHandle="remicksTweetz"
			aokp:donateLink="@string/donate_remicks" />

		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="Roman"
			aokp:twitterHandle="romanbb"
			aokp:donateLink="@string/donate_roman" />

		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="Whitehawkx"
			aokp:twitterHandle="whitehawkx"
			aokp:donateLink="@string/donate_whitehawk" />

		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="Zaphod-Beeble"
			aokp:donateLink="@string/donate_zaph" />

		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="Jonathon Grigg"
			aokp:twitterHandle="jonathongrigg" />

		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="ProTekk"
			aokp:twitterHandle="protekkfzs"
			aokp:donateLink="@string/donate_protekk" />

		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="Khas Mek"
			aokp:twitterHandle="KhasMek"
			aokp:donateLink="@string/donate_khasmek" />
			
		<com.aokp.romcontrol.widgets.DeveloperPreference
			android:title="sethyx"
			aokp:twitterHandle="sethyx"
			aokp:donateLink="@string/donate_sethyx" />
	</PreferenceCategory>

</PreferenceScreen>
